--- a/site/src/App.css
+++ b/site/src/App.css
@@ -14,9 +14,15 @@
 }
 
 .super-charged {
-  background: linear-gradient( rgba(255,0,0,1) 0%, rgba(255,154,0,1) 10%, rgba(208,222,33,1) 20%, rgba(79,220,74,1) 30%, rgba(63,218,216,1) 40%, rgba(47,201,226,1) 50%, rgba(28,127,238,1) 60%, rgba(95,21,242,1) 70%, rgba(186,12,248,1) 80%, rgba(251,7,217,1) 90%, rgba(255,0,0,1) 100%) 
-  0 0/100% 200%;
-   animation: ultimate-charged 2s linear infinite;
+  background: linear-gradient(+90deg, rgba(255, 0, 0, 1) 0%, rgba(255, 154, 0, 1) 10%, rgba(208, 222, 33, 1) 20%, rgba(79, 220, 74, 1) 30%, rgba(63, 218, 216, 1) 40%, rgba(47, 201, 226, 1) 50%, rgba(28, 127, 238, 1) 60%, rgba(95, 21, 242, 1) 70%, rgba(186, 12, 248, 1) 80%, rgba(251, 7, 217, 1) 90%, rgba(255, 0, 0, 1) 100%) 0/400px;
+}
+
+.super-charged-left {
+  animation: ultimate-charged-left 2.5s linear infinite;
+}
+
+.super-charged-right {
+  animation: ultimate-charged-right 2.5s linear infinite;
 }
 
 .App-header {
@@ -45,12 +51,22 @@
 }
 
 
-@keyframes ultimate-charged {
-  from {
-    background-position: 0 -200%
+@keyframes ultimate-charged-left {
+  0% {
+    background-position: 0 0;
   }
 
-  to {
-    background-position: 0 +200%
+  100% {
+    background-position: 400px 0;
+  }
+}
+
+@keyframes ultimate-charged-right {
+  0% {
+    background-position: 400px 0;
+  }
+
+  100% {
+    background-position: 0 0;
   }
 }
